all ratings added to an object
