# routes/PlayerDetails.js
@@ -32,29 +32,31 @@ router.post('/create', verify, async (req, res) => {
         // CurrentClubsAchievements: req.body.CurrentClubsAchievements,
         Clubs: req.body.Clubs,
         //Step 4
-        Catching: req.body.Catching,
-        Punching: req.body.Punching,
-        Throwing: req.body.Throwing,
-        Reflexes: req.body.Reflexes,
-        Distribution: req.body.Distribution,
-        Center_Defender: req.body.Center_Defender,
-        Right_Back: req.body.Right_Back,
-        Left_Back: req.body.Left_Back,
-        Agility: req.body.Agility,
-        Tackle: req.body.Tackle,
-        Strength: req.body.Strength,
-        Positioning: req.body.Positioning,
-        Communication: req.body.Communication,
-        Ariel_Ability: req.body.Ariel_Ability,
-        Vision: req.body.Vision,
-        Crossing: req.body.Crossing,
-        Fitness: req.body.Fitness,
-        Shooting: req.body.Shooting,
-        Ball_Control: req.body.Ball_Control,
-        Dribbling: req.body.Dribbling,
-        First_Touch: req.body.First_Touch,
-        Passing: req.body.Passing,
-        heading: req.body.heading,
+        Ratings:{
+            Catching: req.body.Catching,
+            Punching: req.body.Punching,
+            Throwing: req.body.Throwing,
+            Reflexes: req.body.Reflexes,
+            Distribution: req.body.Distribution,
+            Center_Defender: req.body.Center_Defender,
+            Right_Back: req.body.Right_Back,
+            Left_Back: req.body.Left_Back,
+            Agility: req.body.Agility,
+            Tackle: req.body.Tackle,
+            Strength: req.body.Strength,
+            Positioning: req.body.Positioning,
+            Communication: req.body.Communication,
+            Ariel_Ability: req.body.Ariel_Ability,
+            Vision: req.body.Vision,
+            Crossing: req.body.Crossing,
+            Fitness: req.body.Fitness,
+            Shooting: req.body.Shooting,
+            Ball_Control: req.body.Ball_Control,
+            Dribbling: req.body.Dribbling,
+            First_Touch: req.body.First_Touch,
+            Passing: req.body.Passing,
+            Heading: req.body.Heading
+        },        
         //Step 5
         Ambition: req.body.Ambition,
         MobileNumber: req.body.MobileNumber,
@@ -102,29 +104,31 @@ router.post('/update', verify, async (req, res) => {
                     // CurrentClubsAchievements: req.body.CurrentClubsAchievements,
                     Clubs: req.body.Clubs,
                     //Step 4
-                    Catching: req.body.Catching,
-                    Punching: req.body.Punching,
-                    Throwing: req.body.Throwing,
-                    Reflexes: req.body.Reflexes,
-                    Distribution: req.body.Distribution,
-                    Center_Defender: req.body.Center_Defender,
-                    Right_Back: req.body.Right_Back,
-                    Left_Back: req.body.Left_Back,
-                    Agility: req.body.Agility,
-                    Tackle: req.body.Tackle,
-                    Strength: req.body.Strength,
-                    Positioning: req.body.Positioning,
-                    Communication: req.body.Communication,
-                    Ariel_Ability: req.body.Ariel_Ability,
-                    Vision: req.body.Vision,
-                    Crossing: req.body.Crossing,
-                    Fitness: req.body.Fitness,
-                    Shooting: req.body.Shooting,
-                    Ball_Control: req.body.Ball_Control,
-                    Dribbling: req.body.Dribbling,
-                    First_Touch: req.body.First_Touch,
-                    Passing: req.body.Passing,
-                    heading: req.body.heading,
+                    Ratings: {
+                        Catching: req.body.Catching,
+                        Punching: req.body.Punching,
+                        Throwing: req.body.Throwing,
+                        Reflexes: req.body.Reflexes,
+                        Distribution: req.body.Distribution,
+                        Center_Defender: req.body.Center_Defender,
+                        Right_Back: req.body.Right_Back,
+                        Left_Back: req.body.Left_Back,
+                        Agility: req.body.Agility,
+                        Tackle: req.body.Tackle,
+                        Strength: req.body.Strength,
+                        Positioning: req.body.Positioning,
+                        Communication: req.body.Communication,
+                        Ariel_Ability: req.body.Ariel_Ability,
+                        Vision: req.body.Vision,
+                        Crossing: req.body.Crossing,
+                        Fitness: req.body.Fitness,
+                        Shooting: req.body.Shooting,
+                        Ball_Control: req.body.Ball_Control,
+                        Dribbling: req.body.Dribbling,
+                        First_Touch: req.body.First_Touch,
+                        Passing: req.body.Passing,
+                        Heading: req.body.Heading,
+                    },
                     //Step 5
                     Ambition: req.body.Ambition,
                     MobileNumber: req.body.MobileNumber,
